# librestsrv

./: CMakeLists.txt  README.md
examples/: example1.cxx  example1.sh
include/: client.hpp  logger.hpp  request.hpp  response.hpp  restsrv.hpp  server.hpp  worker.hpp
include/error/: error.hpp
include/global/: global.hpp
include/log/: logger.hpp
include/server/: request.hpp  server.hpp
src/: client.cxx  logger.cxx  response.cxx  server.cxx  server.hpp  worker.cxx
src/client/: client.cxx
src/log/: logger.cxx
src/server/: request.cxx  server.cxx
